--- a/GameSnake/GameSnake.vcxproj.filters
+++ b/GameSnake/GameSnake.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="Snake.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DefaultConfig.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
