--- a/GameSnake/GameSnake.vcxproj
+++ b/GameSnake/GameSnake.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="AppCore.c" />
     <ClCompile Include="AppNav.c" />
+    <ClCompile Include="GameExec.c" />
     <ClCompile Include="Snake.c" />
     <ClCompile Include="Graphics.c" />
     <ClCompile Include="Logger.c" />
@@ -138,6 +139,7 @@
     <ClInclude Include="AppCore.h" />
     <ClInclude Include="AppNav.h" />
     <ClInclude Include="DefaultConfig.h" />
+    <ClInclude Include="GameExec.h" />
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Snake.h" />
