--- a/GameSnake/GameSnake.vcxproj.filters
+++ b/GameSnake/GameSnake.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Snake.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameExec.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Logger.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Snake.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameExec.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DefaultConfig.h">
