--- a/GameSnake/GameSnake.vcxproj
+++ b/GameSnake/GameSnake.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="AppNav.c" />
     <ClCompile Include="AppText.c" />
     <ClCompile Include="GameExec.c" />
+    <ClCompile Include="Menu.c" />
     <ClCompile Include="Snake.c" />
     <ClCompile Include="Graphics.c" />
     <ClCompile Include="Logger.c" />
@@ -152,6 +153,7 @@
     <ClInclude Include="GameExec.h" />
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Snake.h" />
   </ItemGroup>
   <ItemGroup>
