--- a/GameSnake/GameSnake.vcxproj
+++ b/GameSnake/GameSnake.vcxproj
@@ -141,7 +141,7 @@
     <ClCompile Include="Audio.c" />
     <ClCompile Include="Food.c" />
     <ClCompile Include="GameExec.c" />
-    <ClCompile Include="GameExecFinish.c" />
+    <ClCompile Include="GameOver.c" />
     <ClCompile Include="Menu.c" />
     <ClCompile Include="Snake.c" />
     <ClCompile Include="Graphics.c" />
@@ -156,7 +156,7 @@
     <ClInclude Include="DefaultConfig.h" />
     <ClInclude Include="Food.h" />
     <ClInclude Include="GameExec.h" />
-    <ClInclude Include="GameExecFinish.h" />
+    <ClInclude Include="GameOver.h" />
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Menu.h" />
