Create Tools module
- Decouple fatal thrower, dynamic memory allocation and random number generation implementation
- By doing so, lib becomes more portable to other platforms
- Also remove stdlib and stdbool references in code: (void*)0 instead of NULL and int instead of bool
- Remove LoggerInterface.c since macro is always verified before trying to log

--- a/GameSnakeLib/GameSnakeLib.vcxproj
+++ b/GameSnakeLib/GameSnakeLib.vcxproj
@@ -24,13 +24,14 @@
     <ClInclude Include="GameController.h" />
     <ClInclude Include="LoggerInterface.h" />
     <ClInclude Include="Snake.h" />
+    <ClInclude Include="Tools.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Food.c" />
     <ClCompile Include="GameConfig.c" />
     <ClCompile Include="GameController.c" />
-    <ClCompile Include="LoggerInterface.c" />
     <ClCompile Include="Snake.c" />
+    <ClCompile Include="Tools.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
