--- a/GameSnake/GameSnake.vcxproj.filters
+++ b/GameSnake/GameSnake.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Settings.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RecordsController.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Settings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RecordsController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
