--- a/GameSnake/GameSnake.vcxproj
+++ b/GameSnake/GameSnake.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="Menu.c" />
     <ClCompile Include="Graphics.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="Records.c" />
     <ClCompile Include="RecordsController.c" />
     <ClCompile Include="Settings.c" />
   </ItemGroup>
@@ -160,6 +161,7 @@
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="Records.h" />
     <ClInclude Include="RecordsController.h" />
     <ClInclude Include="Settings.h" />
   </ItemGroup>
